--- a/admin/package.json
+++ b/admin/package.json
@@ -4,20 +4,42 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format-prettier": "prettier --write .",
+    "format-eslint": "eslint --fix",
+    "prepare ": "husky install"
   },
   "dependencies": {
     "ant-design-vue": "^3.0.0-alpha.14",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.1",
     "vite-plugin-components": "^0.13.3",
     "vite-plugin-importer": "^0.2.5",
     "vue-tsc": "^0.29.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,md,ts,vue}": "eslint --fix"
   }
 }
